# Trace

./: .gitignore  Build.txt  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml  launch.vbs  package.json
.github/workflows/: desktop-beta.yml  desktop-release.yml
backend/: ai_provider.py  audit.py  database.py  ingest.py  main.py  microsoft_graph.py  models.py  requirements.txt  run.py  scheduler.py  schemas.py  services_signals.py  storage_backend.py  storage_backup.py  storage_nextcloud.py  trace-backend.spec
backend/routers/: ai_features.py  areas.py  attachments.py  entries.py  generate.py  ingest.py  insights.py  microsoft.py  nudges.py  settings.py  signals.py  storage.py  subtasks.py  threads.py
docs/: AZURE_SETUP.md  MIGRATION_0.5.1.md  desktop-build.md
frontend/: index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css  tokens.css
frontend/src/api/: client.js  microsoft.js  nudges.js  settings.js  signals.js  storage.js  tasks.js  tauri.js
frontend/src/components/: AIRequiredCard.jsx  ActionSuggestionBanner.jsx  AddMeetingModal.jsx  ConfirmDialog.jsx  FontPicker.jsx  IconPicker.jsx  IntegrationsHub.jsx  Logo.jsx  MicrosoftIntegration.jsx  Modal.jsx  NewAreaModal.jsx  QuickCapture.jsx  QuickSwitcher.jsx  SettingsMenu.jsx  Sidebar.jsx  Spinner.jsx  SplashScreen.jsx  StatusBadge.jsx  StatusChangeModal.jsx  StorageSetupModal.jsx  SubtaskList.jsx  SystemSettingsMenu.jsx  TaskDecompositionDrawer.jsx  ThemeToggle.jsx  ThreadCard.jsx  Toast.jsx  UpdateToast.jsx  WeeklyRoundupModal.jsx
frontend/src/components/_parked/: RecentActivity.jsx
frontend/src/hooks/: useAIConfigured.js  useAppVersion.js  useAvatar.js  useDisplayName.js  useEntryAI.js  useFont.js  useTextSize.js  useTheme.js  useUpdater.js
frontend/src/pages/: AreaView.jsx  Dashboard.jsx  Insights.jsx  LogView.jsx  ProcessView.jsx  Signals.jsx  SystemSettings.jsx  ThreadView.jsx
frontend/src/utils/: entityIcons.js  platform.js  status.js
scripts/: build-backend.py
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsi
src-tauri/permissions/: default.toml
src-tauri/src/: main.rs
